# wire

./: .dockerignore  .gitattributes  .gitignore  .issue-add-reachability.md  .issue-claim-relay.md  .issue-silent-ct.md  .mcp.json  .wire-msg-will-rfc006.md  AGENT.md  AGENTS.md  ANTI_FEATURES.md  AWESOME_LISTS.md  BACKLOG.md  BRAND_BRAINSTORM.md  CHANGELOG.md  COMPETITIVE_v0_5.md  CONTRIBUTING.md  Cargo.toml  DEPLOY_TEST.md  Dockerfile  GITHUB_COPILOT_IMPLEMENTATION.md  HANDOFF.md  INSTALL.md  LAUNCH_POSTS.md  LICENSE-MIT  LICENSE.md  PENTEST.md  PRIVACY.md  README.md  REDDIT_LOCALLLAMA_POST.md  REUSE.toml  ROAD_TO_1.0.md  SANDBOX_HARDEN_SPEC.md  SECURITY.md  SESSION_LOG_2026_05_12.md  SESSION_LOG_2026_05_15.md  SESSION_LOG_2026_06_09.md  SESSION_LOG_2026_06_11.md  SESSION_LOG_2026_06_11_THEME_EF.md  SESSION_LOG_2026_06_12_DISCOVERABILITY.md  (+15 more)
.claude-plugin/: plugin.json
.github/workflows/: backup-relay-state.yml  ci.yml  release.yml
.planning/plans/: 2026-06-05-phase1-wire-nuke.md
.planning/research/: SYNTHESIS-wire-positioning.md  codebase-audit-2026-05-23.md  identity-primitive-survey-2026-05-22.md  slice-a-ai-frameworks.md  slice-b-federation-identity.md  slice-c-ipc-localfirst-pubsub.md  transport-substrate-2026-05-23.md
.planning/specs/: 2026-06-05-remove-backwards-compat-design.md
assets/: demo-loop.tape  demo.tape  wire-statusline.sh
contrib/: wire-mcp-proxy.py
deploy/: Dockerfile  README.md  compose.yml
docs/: AGENT_INTEGRATION.md  CLOUD_MIGRATION.md  CODEX_HANDOFF.md  CONSENT_DESIGN.md  CONTAINERS.md  DEPRECATION_POLICY.md  EFFICIENT_AGENT_COMMS.md  EMAIL_INTEROP.md  INCIDENT_REPORT_2026_05_12_AGENT_ATTENTION_LAYER.md  MAC_HANDOFF_2026_05_12.md  PLUGIN.md  PROMPT_per_company_relay_planning.md  PROMPT_repo_scrub.md  PROMPT_v0.15_sso_connectors.md  PROTOCOL.md  SANDBOXES.md  STATUSLINE.md  TASK_I_AGENT_AWARE_ROOT.md  THREAT_MODEL.md  V0_13_2_PLATFORM_HARDENING.md  deployment-tiers.md  gb10-upgrade-2026-06-14.md
docs/a2a-extension/: wire-identity-v1.md
docs/adapters/: HARNESS.md
docs/blog/: wire-and-a2a.md
docs/did-methods/: did-wire-method.md
docs/history/: INCIDENT_2026_05_24_MCP_CLAIM_DIAL_RELAY.md  INCIDENT_REPORT_2026_05_12_AGENT_ATTENTION_LAYER.md  POSTMORTEM_WIRE_PAIRING_2026_05_11.md
docs/integrations/: COPILOT_CLI.md  GITHUB_COPILOT.md  LOCAL_LLM.md  MS_COPILOT_SPIKE.md  OPENCODE.md  PI.md
docs/rfc/: 0000-template.md  0001-identity-layer.amendment-filtering.md  0001-identity-layer.amendment-same-machine.md  0001-identity-layer.amendment-sso.md  0001-identity-layer.md  0001-identity-layer.prior-art.md  0002-token-efficient-comms.md  0003-per-company-relays.amendment-deployment-tiers.md  0003-per-company-relays.md  0004-connection-health-probing.md  0005-remove-backwards-compat.amendment-phase4-kill.md  0005-remove-backwards-compat.md  0005-session-key-precedence.md  0006-confidentiality-roadmap-sequencing.md  0006-consolidate-dual-representations.md  0006-d1-nip44-design.md  0006-session-key-precedence.md  0006-spike-vodozemac-vs-nip44.md  0007-nostr-transport-binding.md  0007-spike-curve-derivation.md  0008-session-key-precedence.md  0009-nostr-addressing-primary.md  README.md
docs/seo/: SEO-ASSETS-CHECKLIST.md
docs/superpowers/plans/: 2026-06-06-remove-backcompat-shims.md  2026-06-09-cli-split.md
docs/superpowers/specs/: 2026-05-24-session-keyed-identity-design.md  2026-05-25-group-chat-design.md
examples/: character_demo.rs
examples/systemd/: wire-daemon.service  wire-relay-server.service
hooks/: hooks.json
hooks/scripts/: session-start.sh
landing/: _redirects  demo.cast  demo.sh  index.html  install.sh  openshell-policy.sh  phonebook.html  stats.html
launch/: ASSETS_DRAFTS.md  LAUNCH_PLAN.md
scoop/: README.md  wire.json
scripts/: Dockerfile.hello-world  demo-show.sh  hello-world-validate.sh  pentest.sh
skills/wire-doctor/: SKILL.md
skills/wire-enroll/: SKILL.md
skills/wire-init/: SKILL.md
skills/wire-monitor/: SKILL.md
skills/wire-pair/: SKILL.md
skills/wire-quiet/: SKILL.md
skills/wire-send/: SKILL.md
specs/.research/: efficient-comms-log.md  efficient-comms-revision-plan.md
src/: agent_card.rs  blocklist.rs  canonical.rs  character.rs  cli.rs  config.rs  daemon_stream.rs  daemon_supervisor.rs  diag.rs  endpoints.rs  enroll.rs  ensure_up.rs  group.rs  identity.rs  inbox_watch.rs  init.rs  lib.rs  macaroon.rs  mcp.rs  nip44.rs  nip_w1.rs  nostr_event.rs  nostr_key.rs  nostr_relay.rs  nostr_ws.rs  nuke.rs  org_bind.rs  org_membership.rs  org_policy.rs  os_notify.rs  pair_decision.rs  pair_invite.rs  pair_profile.rs  pair_session.rs  pending_inbound_pair.rs  pending_pair.rs  platform.rs  probe.rs  pull.rs  relay_client.rs  (+10 more)
src/adapters/: harness.rs  mod.rs
src/cli/: comms.rs  demo.rs  group.rs  identity.rs  lifecycle.rs  mesh.rs  mod.rs  nostr.rs  pairing.rs  relay.rs  session.rs  setup.rs  status.rs  upgrade.rs
src/enc/: mod.rs  wire_x25519.rs
src/testdata/: nip44_official_vectors.json
test-env/: Dockerfile  README.md  run.sh  runtime-210.sh
tests/: cli.rs  e2e_bilateral.rs  e2e_detached_pair.rs  e2e_dual_slot.rs  e2e_group.rs  e2e_handle_pair.rs  e2e_identity.rs  e2e_invite_pair.rs  e2e_key_rotation.rs  e2e_mesh.rs  e2e_org_bind.rs  e2e_org_verified.rs  e2e_pair.rs  e2e_project_fanout.rs  heartbeat_body_roundtrip.rs  macaroon.rs  mcp_pair.rs  openshell_policy_coverage.rs  relay.rs  stress.rs  stress_within_system.rs  test_agent_card.py  test_signing.py  test_trust.py  trust_ceiling_prop.rs
tests/it/: 10-handle-pair.sh  100-fleet-link.sh  110-nostr-binding.sh  20-local-mesh.sh  30-onboarding.sh  40-nuke-recovery.sh  50-group-chat.sh  60-remote-relay.sh  70-unclaim.sh  80-health-probe.sh  90-rotation-refresh.sh  README.md  lib.sh  run-all.sh
wire/: __init__.py  _version.py  agent_card.py  signing.py  trust.py
