[package]
name = "wire"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Magic-wormhole for AI agents — bilateral signed-message bus over a mailbox relay"
license = "AGPL-3.0-or-later AND Apache-2.0 AND MIT"
readme = "README.md"
keywords = ["agent", "p2p", "ed25519", "wormhole", "mailbox"]
categories = ["command-line-utilities", "cryptography", "network-programming"]

[lib]
name = "wire"
path = "src/lib.rs"

[[bin]]
name = "wire"
path = "src/bin/wire.rs"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = "1"
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "fs", "io-util"] }
tower = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
spake2 = "0.4"
hkdf = "0.12"
chacha20poly1305 = "0.10"

[dev-dependencies]
proptest = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
