[package]
name = "slancha-wire"
version = "0.13.3"
edition = "2024"
rust-version = "1.88"
description = "Magic-wormhole for AI agents — bilateral signed-message bus over a mailbox relay"
license = "AGPL-3.0-or-later AND Apache-2.0 AND MIT"
readme = "README.md"
authors = ["Paul Logan <paul@slancha.ai>"]
homepage = "https://github.com/SlanchaAi/wire"
repository = "https://github.com/SlanchaAi/wire"
documentation = "https://github.com/SlanchaAi/wire#readme"
keywords = ["agent", "p2p", "ed25519", "wormhole", "mailbox"]
categories = ["command-line-utilities", "cryptography", "network-programming"]
exclude = [
    "CLAUDE.md",
    "AGENTS.md",
    ".claude/",
    ".gitnexus/",
    ".planning/",
    "SESSION_LOG_*.md",
]

[lib]
name = "wire"
path = "src/lib.rs"

[[bin]]
name = "wire"
path = "src/bin/wire.rs"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
hostname = "0.4"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "5"
anyhow = "1"
fs2 = "0.4"
axum = "0.7"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }
tower-service = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "fs", "io-util"] }
tokio-stream = "0.1"
futures = "0.3"
tower = "0.5"
tower_governor = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "blocking", "stream"] }
spake2 = "0.4"
hkdf = "0.12"
hmac = "0.12"
chacha20poly1305 = "0.10"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
